[package]
name = "domus-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/j-chad/domus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.24"
diesel = { version = "2.1.0", features = ["postgres","chrono","uuid","r2d2"] }
uuid = { version = "1.3.3", features = ["v4","fast-rng","macro-diagnostics"] }
serde = { version="1.0.163", features = ["derive"] }
validator = { version = "0.16.0", features=["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.96"
argon2 = "0.5.0"
utoipa = { version = "3", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
jsonwebtoken = "8"
