[package]
name = "domus"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/j-chad/domus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["tracing"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
serde = { version="1.0.163", features = ["derive"] }
serde_json = "1.0.96"
utoipa = { version = "3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["trace"] }
diesel = { version = "2.1.0", features = ["chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["v4"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
deadpool = "0.9.5"
dotenvy = { version = "0.15" }
chrono = "0.4.26"
base62 = "2.0.2"
const_format = "0.2.31"
argon2 = "0.5.1"
pasetors = { version = "0.6.7", features = ["paserk"] }
config = "0.13.3"
toml = "0.8.0"
anyhow = "1.0.75"
thiserror = "1.0.49"

